--- a/src/html/common/_header.pug
+++ b/src/html/common/_header.pug
@@ -1,7 +1,10 @@
 header(class="content--header")
   .content__top
     .main-title-area
-      h1(class="main-title") Junichiro Kohari
+      h1(class="main-title")
+        img(
+          src="../img/logo-primary.png"
+        )
       <!-- set subtitle in javascript -->
       h2(class="main-subtitle")
   include _nav.pug
