--- a/src/html/common/_footer.pug
+++ b/src/html/common/_footer.pug
@@ -1,2 +1,2 @@
 footer(class="footer")
-  small(class="copyright") COPYRIGHT&copy;2020 Junichiro Kohari. ALL RIGHTS RESERVED.
+  small(class="copyright") COPYRIGHT&copy;2026 It's Automatic Corp. ALL RIGHTS RESERVED.
