--- a/src/html/common/_nav.pug
+++ b/src/html/common/_nav.pug
@@ -1,13 +1,11 @@
 nav(class="nav display-none")
   ul(class="nav-ul")
     li(class="nav-li")
-      a(href="#wrapper" class="nav-link") TOP
+      a(href="#about-us" class="nav-link") ABOUT US
     li(class="nav-li")
-      a(href="#profile" class="nav-link") PROFILE
+      a(href="#products" class="nav-link") PRODUCTS
     li(class="nav-li")
-      a(href="#services" class="nav-link") SERVICES
-    li(class="nav-li")
-      a(href="#works" class="nav-link") WORKS
+      a(href="#company" class="nav-link") COMPANY
     li(class="nav-li")
       a(href="#contact" class="nav-link") CONTACT
 .hamb-button
