--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,49 +1,45 @@
 doctype html
 html(lang="ja" class="no-js")
-head
-  meta(charset="UTF-8")
-  meta(name="viewport" content="width=device-width, initial-scale=1")
-  title Junichiro Kohari - Software Developer
-  meta(
-    name="description"
-    content="システム開発承っております！新規作成から既存サイトの改修まで幅広く対応しております！"
-  )
-  meta(name="author" content="J.Kohari")
+  head
+    meta(charset="UTF-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover")
+    title 株式会社It's Automatic
+    meta(
+      name="description"
+      content="株式会社It's Automaticは、スマホアプリやWebサービスを企画し、開発から運営まで行っています。使いやすさは、機能ではなく体験だと考えています。気づけば使っている、そんな体験を目指しています。"
+    )
+    meta(name="author" content="J.Kohari")
 
-  <!-- Google Font -->
-  link(href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet")
+    <!-- Google Font -->
+    link(href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet")
 
-  <!-- Font Awesome -->
-  link(href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet")
+    <!-- Font Awesome -->
+    link(href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet")
 
-  <!-- css -->
-  link(href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet")
-  link(href="https://cdn.jsdelivr.net/npm/modaal@0.4.4/dist/css/modaal.min.css" rel="stylesheet")
+    <!-- css -->
+    link(href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet")
 
-  <!-- script -->
-  script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/regl/2.1.0/regl.min.js')
-  script(src="https://unpkg.com/aos@2.3.1/dist/aos.js")
-  script(src="https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/js/modaal.min.js")
+    <!-- script -->
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/regl/2.1.0/regl.min.js')
+    script(src="https://unpkg.com/aos@2.3.1/dist/aos.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/Modaal/0.4.4/js/modaal.min.js")
 
-  <!-- favicon -->
-body(class="demo-8 loading")
-#wrapper
-  canvas(id="webgl")
-  include common/_header.pug
-  main
-    div(class="content main-visual")
-      h2(class="main-visual__message")
-        span Junichiro
-        br
-        span Kohari's
-        br
-        span Homepage
-    include section/_profile.pug
-    include section/_services.pug
-    include section/_works.pug
-    include section/_contact.pug
-    .pagetop(style="display: block;")
-      a(href="#wrapper")
-        i(class="fas fa-chevron-up")
-  include common/_footer.pug
+  body(class="demo-8 loading")
+    #wrapper
+      canvas(id="webgl")
+      include common/_header.pug
+      main
+        div(class="content main-visual")
+          h2(class="main-visual__vision")
+            span Used naturally.
+            br
+            span Easy to use.
+        include section/_about-us.pug
+        include section/_products.pug
+        include section/_company.pug
+        include section/_contact.pug
+        .pagetop(style="display: block;")
+          a(href="#wrapper")
+            i(class="fas fa-chevron-up")
+      include common/_footer.pug
