--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,10 +1,25 @@
 *, *::after, *::before {
 	box-sizing: border-box;
 }
+html {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+}
 body {
+	width: 100%;
+	margin: 0;
+	padding: 0;
 	font-family: 'Roboto Mono', monospace;
 	color: #fff;
 	background: #000;
+	overflow-x: hidden;
+}
+#wrapper {
+	width: 100%;
+	margin: 0;
+	padding: 0;
 }
 a {
 	text-decoration: none;
@@ -83,6 +98,7 @@ main::before {
 
 /* 各セクション共通設定 */
 .content--related {
+	height: auto !important;
 	position: relative;
 	display: flex;
 	min-height: 50vh;
@@ -92,11 +108,12 @@ main::before {
 		flex: 1;
 		height: 100%;
 		background: rgba(53, 50, 50, 0.98);
+		padding: 0 4em;
 	}
 }
 .content__text {
 	width: 100%;
-	margin-bottom: 1.5em;
+	/* margin-bottom: 1.5em; */
 	font-size: 2.5em;
 	font-weight: normal;
 	text-align: center;
@@ -108,17 +125,20 @@ main::before {
     width: 15%;
     min-width: 5em;
     margin: 0% auto;
-    border-bottom: 1px solid #3F85E7;
+    border-bottom: 1px solid #cc78aa;
 }
 .text-style {
 	text-align: justify;
 	line-height: 1.75;
 	letter-spacing: 1px;
 }
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 430px) {
 	.content--related {
-		margin: 6em 0 0 0;
-		padding: 2em 1.5em 4em 1.5em;
+		padding: 0;
+
+		.section-wrapper {
+			padding: 0 1em;
+		}
 	}
 }
 
@@ -128,6 +148,7 @@ main::before {
 	position: relative;
 	z-index: 11;
 	align-items: flex-start;
+	justify-content: flex-start;
 	width: 100%;
 	padding: 1.5em;
 }
@@ -136,29 +157,36 @@ main::before {
 	flex-direction: row;
 	flex-wrap: wrap;
 	align-items: center;
-	width: 80%;
+	width: auto;
 }
 .main-title-area {
 	display: flex;
 	flex-flow: wrap;
-	margin: 0 1em;
+	margin: 0;
 	white-space: nowrap;
+	align-items: center;
 }
 .main-title {
-	font-size: calc(14px + 1vw);
-	font-weight: normal;
+	background: #ffdef7cc;
 	margin: 0;
-	padding: 0;
-	white-space: nowrap;
+	padding: 2px 1em;
+	display: flex;
+	align-items: center;
+	border-radius: 25px;
+}
+.main-title img {
+	max-width: 220px;
+	max-height: 60px;
+	width: auto;
+	height: auto;
+	display: block;
+	object-fit: contain;
 }
 .main-subtitle {
-	font-size: calc(12px + .9vw);
+	font-size: calc(10px + .9vw);
 	margin: 0 1em;
+	padding: 5px;
 	opacity: 0.8;
-}
-.main-subtitle::before,
-.main-subtitle::after {
-	content: ' // ';
 }
 
 /* ハンバーガーメニュー */
@@ -195,13 +223,13 @@ main::before {
     position: fixed;
     margin: 5px;
     top: 15px;
-    right: 15px;
-    width: 40px;
-    min-width: 40px;
-    height: 40px;
-    padding: 5px;
-	border-radius: 3px;
-	background: rgb(53, 50, 50);
+    right: 20px;
+    width: 50px;
+    min-width: 50px;
+    height: 50px;
+    padding: 10px;
+	border-radius: 25px;
+	background: #ffdef7cc;
     cursor: pointer;
     z-index: 2;
 }
@@ -221,7 +249,7 @@ main::before {
 	width: 100%;
 	height: 4px;
 	border-radius: 3px;
-	background: #fff;
+	background: #7b9bff;
 	transition: all .7s;
 }
 .close-button {
@@ -254,7 +282,7 @@ main::before {
 	top: 0;
 	right: 0;
 	width: 15em;
-	padding-bottom: 17em;
+	padding-bottom: 13em;
 	border: 2px solid rgb(53, 50, 50);
 	background: rgb(53, 50, 50);
 	transition: .7s ease-in-out;
@@ -278,13 +306,19 @@ main::before {
 	color: rgb(53, 50, 50);
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 640px) {
+	.main-title {
+		padding: 10px 1em;
+	}
+}
+@media screen and (max-width: 430px) {
 	.main-title-area {
 		flex-flow: wrap;
 		white-space: nowrap;
 	}
-	.main-title {
-		padding-top: .8em;
+	.main-title img {
+		max-width: 150px;
+		max-height: 45px;
 	}
 }
 
@@ -294,7 +328,7 @@ main::before {
 	flex-flow: column;
 	justify-content: center;
 }
-.main-visual__message {
+.main-visual__vision {
 	width: 100%;
 	padding-left: .4em;
 	margin-top: .3em;
@@ -303,19 +337,19 @@ main::before {
 	font-weight: 900;
 }
 
-/* PROFILE */
-.profile-item {
-	display: flex;
-	justify-content: space-evenly;
-	width: 88%;
-	margin: 0 auto;
+/* About us */
+.vision-ja {
+	font-size: calc(3em + 4vw);
+	font-weight: 900;
+	p {
+		margin: 0;
+	}
 }
-.profile-icon-area {
-	text-align: center;
-}
-.profile-item__img {
-	display: block;
-	height: 300px;
+.company-description {
+	font-size: 24px;
+    padding: 0 .8em 2em .8em;
+    margin: 0;
+    line-height: 1.5em;
 }
 @media screen and (max-width:960px) {
 	.profile-item {
@@ -326,7 +360,18 @@ main::before {
 		width: 300px;
 	}
 }
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 820px) {
+	.vision-ja {
+		font-size: calc(2em + 4vw);
+	}
+}
+@media screen and (max-width: 430px) {
+	.main-visual__vision {
+		font-size: calc(3em + 3vw);
+	}
+	.company-description {
+		font-size: 16px;
+	}
 	.profile-item__img {
 		width: 260px;
 	}
@@ -334,8 +379,54 @@ main::before {
 		font-size: calc(12px + .2vw);
 	}
 }
-
+@media screen and (max-width: 360px) {
+	.main-visual__vision {
+		font-size: calc(3em + 2vw);
+	}
+}
 /* SERVICES */
+.products-wrapper {
+	display: flex;
+	justify-content: center;
+	margin: 0 0 4em 0;
+}
+.products-container {
+	display: flex;
+	flex-direction: column;
+	width: 70%;
+}
+.product-top {
+	width: 100%;
+}
+.product-bottom-wrapper {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	margin-top: 4px;
+	gap: 4px;
+}
+.product-bottom-left,
+.product-bottom-right {
+	flex: 1;
+	width: 50%;
+}
+.product-img {
+	width: 100%;
+	height: auto;
+	display: block;
+}
+.product-link {
+	transition: opacity 0.3s;
+}
+.product-link:hover {
+	opacity: 0.8;
+}
+.product-img-comming-soon {
+	width: 100%;
+	height: auto;
+	opacity: .5;
+	display: block;
+}
 .services-item {
 	display: flex;
 	width: 88%;
@@ -372,12 +463,123 @@ main::before {
 		flex-flow: column wrap;
 	}
 }
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 1024px) {
 	.services-item {
 		width: 100%;
 	}
 	.service-box {
 		margin: 25px 0;
+	}
+	.products-container {
+		width: 95%;
+	}
+}
+
+/* COMPANY */
+.company-content {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 4em;
+	margin: 2em auto;
+	max-width: 90%;
+}
+.company-info {
+	flex: 1;
+	max-width: 400px;
+}
+.company-info h4 {
+	font-size: 1.5em;
+	margin: 0 0 1em 0;
+	color: #cc78aa;
+}
+.company-info dl {
+	margin: 0;
+	padding: 0;
+}
+.company-info dt {
+	font-weight: bold;
+	margin-top: 1em;
+	margin-bottom: 0.5em;
+	color: #cc78aa;
+}
+.company-info dt:first-child {
+	margin-top: 0;
+}
+.company-info dd {
+	margin: 0 0 0 1.5em;
+	padding: 0;
+	line-height: 1.75;
+}
+.company-history {
+	flex: 1;
+	max-width: 400px;
+}
+.company-history h4 {
+	font-size: 1.5em;
+	margin: 0 0 1em 0;
+	color: #cc78aa;
+}
+.company-history ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+.company-history li {
+	display: flex;
+	margin-bottom: 1em;
+	line-height: 1.75;
+}
+.company-history li:last-child {
+	margin-bottom: 0;
+}
+.company-history .year {
+	font-weight: bold;
+	min-width: 5em;
+	margin-right: 1em;
+	color: #cc78aa;
+}
+.company-history .description {
+	flex: 1;
+}
+.company-map {
+	margin-bottom: 4em;
+}
+@media screen and (max-width: 960px) {
+	.company-content {
+		flex-direction: column;
+		gap: 2em;
+	}
+}
+@media screen and (max-width: 430px) {
+	.company-content {
+		margin: 1em 0;
+		max-width: 100%;
+	}
+	.company-info {
+		max-width: 100%;
+	}
+	.company-info h4 {
+		font-size: 1.3em;
+	}
+	.company-info dt {
+		margin-top: 0.8em;
+	}
+	.company-info dd {
+		margin-left: 1em;
+	}
+	.company-history {
+		max-width: 100%;
+	}
+	.company-history h4 {
+		font-size: 1.3em;
+	}
+	.company-history .year {
+		min-width: 4em;
+		margin-right: 0.8em;
+	}
+	.company-map {
+		margin-top: 2em;
 	}
 }
 
@@ -470,7 +672,7 @@ main::before {
 
 	}
 }
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 430px) {
 	.media-item__img {
 		max-width: 90%;
 	}
@@ -488,6 +690,7 @@ main::before {
     min-width: 54.5%;
     width: 37.5%;
     margin: 0 auto;
+	margin-bottom: 4em;
 }
 .contact-inputs {
     display: flex;
@@ -520,7 +723,7 @@ main::before {
     border-radius: 3px;
     color: #fff;
     font-size: .8rem;
-    background: #F682AF;
+    background: #cc78aa;
     text-align: center;
 }
 .contact-input {
@@ -541,11 +744,11 @@ main::before {
     display: inline-block;
     max-width: 100%;
     padding: .6em 4em;
-    background: #cc809f;
+    background: #cc78aa;
 	border: 2px solid transparent;
 	border-radius: 5px;
     color: #fff;
-    font-size: calc(1rem + 0.8vw);
+    font-size: calc(1rem + 0.4vw);
     font-weight: 700;
     text-align: center;
     letter-spacing: .1em;
@@ -565,7 +768,7 @@ main::before {
         height: 187px;
     }
 }
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 430px) {
 	.contact-form {
 		padding: 0;
 	}
@@ -578,7 +781,7 @@ main::before {
 
 /* フッター */
 .footer {
-	margin-top: -3em;
+	margin-top: -2.5em;
 	text-align: center;
 }
 .copyright {
@@ -591,7 +794,7 @@ main::before {
 		padding-bottom: .5em;
 	}
 }
-@media screen and (max-width:415px) {
+@media screen and (max-width:430px) {
 	.footer {
 		margin-top: 0;
 	}
@@ -601,7 +804,7 @@ main::before {
 .pagetop {
     display: none;
     position: fixed;
-    right: 15px;
+    right: 25px;
     bottom: 15px;
 }
 .pagetop > a {
@@ -610,13 +813,13 @@ main::before {
     width: 50px;
     height: 50px;
     text-align: center;
-    background: #3F86E9;
+    background: #ffdef7cc;
     border-radius: 50%;
     line-height: 50px;
 }
 .pagetop > a > i {
     font-size: 20px;
-    color:#fff;
+    color: #7b9bff;
     line-height: 50px;
 }
 
@@ -635,8 +838,12 @@ main::before {
 		padding: 1em 0.5em 0;
 	}
 	.content__top {
-		display: block;
-		text-align: center;
+		display: flex;
+		text-align: left;
+	}
+	.main-title img {
+		max-width: 180px;
+		max-height: 50px;
 	}
 	.main-subtitle {
 		margin: 0;
