modify pagetop element

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -39,7 +39,7 @@ html(lang="ja" class="no-js")
         include section/_products.pug
         include section/_company.pug
         include section/_contact.pug
-        .pagetop(style="display: block;")
+        .pagetop
           a(href="#wrapper")
             i(class="fas fa-chevron-up")
       include common/_footer.pug
