--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -36,7 +36,7 @@ html(lang="ja" class="no-js")
             br
             span Easy to use.
         include section/_about-us.pug
-        include section/_products.pug
+        include section/_business.pug
         include section/_company.pug
         include section/_contact.pug
         .pagetop
