--- a/src/html/section/_business.pug
+++ b/src/html/section/_business.pug
@@ -5,7 +5,7 @@ section(
   data-aos-delay="100"
 )
   .section-wrapper
-    h3(class="content__text") PRODUCTS
+    h3(class="content__text") BUSINESS
     .products-wrapper
       .products-container
         .product-top
@@ -21,10 +21,8 @@ section(
             )
         .product-bottom-wrapper
           .product-bottom-left
-            img(
-              src="../img/product_comming-soon.png"
-              class="product-img-comming-soon"
-            )
+            h4 インフルエンサー仲介事業
+            p SNS総フォロワー約170万人規模のインフルエンサーネットワークを活用し、企業とインフルエンサーをつなぐ仲介・プロモーション支援を行っています。
           .product-bottom-right
             img(
               src="../img/product_comming-soon.png"
