modify company description

--- a/src/html/section/_about-us.pug
+++ b/src/html/section/_about-us.pug
@@ -13,4 +13,5 @@ section(
       div(class="company-description")
         p 株式会社It's Automaticは、スマホアプリやWebサービスを企画し、開発から運営まで行っています。
         p 使いやすさは、機能ではなく体験だと考えています。
+        p ソフトウェアを中心に、そこから生まれる価値をさまざまな事業へ広げています。
         p 気づけば使っている、そんな体験を目指しています。
